[workspace]
resolver = "2"
members = [
    "foundation/token",
    "foundation/metadata",
    "foundation/gax",
    "foundation/longrunning",
    "foundation/auth",
    "googleapis",
    "spanner",
    "pubsub",
    "storage",
    "bigquery",
    "spanner-derive",
    "artifact-registry",
    "kms"
]

[patch.crates-io.tonic]
git = "https://github.com/hyperium/tonic.git"
rev = "e2c506aca5810ceeb6d41190779b7291fcf19d90"

[patch.crates-io.tonic-build]
git = "https://github.com/hyperium/tonic.git"
rev = "e2c506aca5810ceeb6d41190779b7291fcf19d90"
