[workspace]
resolver = "2"
members = [
    "foundation/token",
    "foundation/metadata",
    "foundation/gax",
    "foundation/longrunning",
    "foundation/auth",
    "googleapis",
    "spanner",
    "pubsub",
    "storage",
    "bigquery",
    "spanner-derive",
    "artifact-registry",
    "kms"
]

[patch.crates-io.tonic]
git = "https://github.com/hyperium/tonic.git"
rev = "d312dcc0ec362cb12f6e54072622761d7466a650"

[patch.crates-io.tonic-build]
git = "https://github.com/hyperium/tonic.git"
rev = "d312dcc0ec362cb12f6e54072622761d7466a650"
